# Knowledge_RAG

./: .env.example  .env.template  .flake8  .gitignore  LICENSE  README.md  docker-compose.ci.yml  docker-compose.core.yml  docker-compose.test.yml  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  validate_all_stories.py
.github/workflows/: ci-cd.yml  deploy.yml  progressive-ci.yml  security.yml  test-vector-services.yml  test.yml
data/: epic1-stories.yaml
docs/: architecture.md  comprehensive-story-quality-review.md  deployment-modes.md  environment-setup.md  fullstack-architecture.md  llm-integration-technical-plan.md  pm-checklist-report.md  prd.md  project-brief.md  project-implementation-guide.md  story-implementation-guide.md  technical-architecture-decisions.md
docs/prd/: additional-technical-assumptions-and-requests.md  epic-details.md  epic-list.md  functional-requirements.md  goals-and-background-context.md  index.md  non-functional-requirements.md  repository-structure-monorepo.md  service-architecture.md  testing-requirements.md  总结.md
docs/qa/: nfr-assessment-matrix.md  nfr-assessment-report.md  quality-gate-2.1.yaml  quality-gate-2.2.yaml  quality-gate-2.3.yaml  quality-gate-2.4.yaml  quality-gate-2.5.yaml  test-design-1.1.md  test-design-1.2.md  test-design-1.3.md  test-design-1.4.md  test-design-2.1.md  test-design-2.2.md  test-design-2.3.md  test-design-2.4.md  test-design-2.5.md  test-design-3.1.md  test-design-3.2.md  test-design-3.3.md  test-design-3.4.md  test-design-3.5.md  test-design-4.1.md  test-design-4.2.md  test-design-4.3.md  test-design-4.4.md  test-design-4.5.md  test-design-4.6.md  test-design-5.1.md  test-design-5.2.md  test-design-6.1.md  test-design-6.2.md  test-design-7.1.md  test-design-7.2.md  test-design-8.1.md  test-design-8.2.md  traceability-matrix-2.1.md  traceability-matrix-2.2.md  traceability-matrix-2.3.md  traceability-matrix-2.4.md  traceability-matrix-2.5.md
docs/qa/assessments/: quality-gate-1.1.yaml  quality-gate-1.2.yaml  quality-gate-1.3.yaml  quality-gate-1.4.yaml  quality-gate-1.5.yaml  test-design-1.1.md  test-design-1.2.md  test-design-1.3.md  test-design-1.4.md  test-design-1.5.md  traceability-matrix-1.1.md  traceability-matrix-1.2.md  traceability-matrix-1.3.md  traceability-matrix-1.4.md  traceability-matrix-1.5.md
docs/qa/gates/: 1.1-project-infrastructure.yml  1.2-api-gateway.yml  1.3-auth-system.yml  1.4-document-storage.yml  1.5-database-services.yml  2.1-document-parsing.yml  2.2-vectorization-service.yml  2.3-vector-database.yml  2.4-entity-extraction.yml  2.5-knowledge-graph.yml  3.1-graphrag-engine.yml  3.2-llm-integration.yml  3.3-qa-api.yml  3.4-context-management.yml  3.5-answer-quality.yml  4.1-core-api-design.yml  4.2-document-management-api.yml  4.3-intelligent-search-api.yml  5.1-personalized-recommendation.yml  5.2-intelligent-notification.yml  6.1-user-authentication-authorization.yml  7.1-system-monitoring-logging.yml  8.1-third-party-service-integration.yml
docs/stories/: 1.1.project_infrastructure.md  1.2.api_gateway.md  1.3.auth_system.md  1.4.document_storage.md  1.5.database_services.md  2.1.document_parsing.md  2.2.vectorization_service.md  2.3.vector_database.md  2.4.entity_extraction.md  2.5.knowledge_graph.md  3.1.graphrag_engine.md  3.2.llm_integration.md  3.3.qa_api.md  3.4.context_management.md  3.5.answer_quality.md  4.1.core_api_design.md  4.2.document_management_api.md  4.3.intelligent_search_api.md  4.4.qa_system_api.md  4.5.knowledge_graph_api.md  4.6.monitoring_analytics_api.md  5.1.ui_framework.md  5.2.responsive_design_interaction.md  6.1.user_authentication_authorization.md  6.2.permission_management_access_control.md  7.1.system_monitoring_logging.md  7.2.performance_optimization_scaling.md  8.1.third_party_service_integration.md  8.2.data_migration_backup.md
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: dashboard.yml  knowledge-rag-overview.json
monitoring/grafana/datasources/: prometheus.yml
scripts/: cleanup_test_env.py  init-databases.sql  init-test-db.sql  init_test_data.py  run_tests.py  setup-dev.sh  test-core-rag.sh  test-vector-services.sh  validate-env.py
services/: __init__.py
services/api-gateway/: Dockerfile  README.md  __init__.py  config.py  main.py
services/auth-service/: Dockerfile  config.py  database.py  email_service.py  main.py  middleware.py  models.py  pytest.ini  requirements.txt  start.py  test_auth.py
services/database-service/: __init__.py  backup_manager.py  health_monitor.py  migration_manager.py  neo4j_config.py  performance_optimizer.py  postgres_config.py  redis_config.py  test_database_service.py
services/document-service/: Dockerfile  __init__.py  backup.py  config.py  database.py  main.py  models.py  preview.py  requirements.txt  schemas.py  services.py  storage.py  test_document_service.py
services/graph-service/: Dockerfile  __init__.py
services/graph-service/app/: __init__.py  main.py
services/graph-service/app/api/: __init__.py  routes.py
services/graph-service/app/core/: __init__.py  config.py  dependencies.py
services/graph-service/app/services/: __init__.py  graphrag_manager.py  neo4j_manager.py
services/knowledge-graph-service/: Dockerfile
services/llm-service/: Dockerfile  __init__.py  main.py
services/notification-service/: Dockerfile  __init__.py  main.py
services/qa-service/: Dockerfile  __init__.py  main.py
services/vector-service/: Dockerfile  __init__.py
services/vector-service/app/: __init__.py  main.py
services/vector-service/app/api/: __init__.py  routes.py
shared/: __init__.py
shared/config/: __init__.py  graphrag_config.py  weaviate_config.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_user_workflows.py
tests/integration/: __init__.py  test_api_integration.py  test_database_integration.py
tests/performance/: __init__.py  test_benchmarks.py  test_load_testing.py
tests/unit/: __init__.py  test_api_gateway.py  test_auth_service.py  test_shared_utils.py
tools/: story-generator.py
(+6 files in other folders)
